# 8BallGameAnalyzer

./: CMakeLists.txt  README.md  main.cpp  main.cpp2  main.cpp3
include/: billiardAnalyzer.hpp  billiardMatches.hpp
src/: Ball.cpp  Detection.cpp  EightBallPoolGame.cpp  PoolTable.cpp  Utility.cpp  billiardAnalyzer.cpp
